--- a/bower.json
+++ b/bower.json
@@ -11,7 +11,8 @@
     "requirejs": "2.3.3",
     "angular-ui-router": "ui-route#1.0.3+hybrid-2.0.0-2",
     "angular-resource": "1.6.4",
-    "less": "2.7.2"
+    "less": "2.7.2",
+    "angular-mocks": "1.6.4"
   },
   "devDependencies": {}
 }
