--- a/package.json
+++ b/package.json
@@ -1,8 +1,20 @@
 {
-    "name": "SpotifyApp",
-    "version": "1.0.0",
-    "keywords": ["util", "functional", "server", "client", "browser"],
-    "author": "giampaolo",
-    "contributors": [],
-    "dependencies": {}
+  "name": "SpotifyApp",
+  "version": "1.0.0",
+  "keywords": [
+    "util",
+    "functional",
+    "server",
+    "client",
+    "browser"
+  ],
+  "author": "giampaolo",
+  "contributors": [],
+  "dependencies": {},
+  "devDependencies": {
+    "jasmine-core": "^2.6.2",
+    "karma": "^1.7.0",
+    "karma-chrome-launcher": "^2.1.1",
+    "karma-jasmine": "^1.1.0"
+  }
 }
