--- a/package.json
+++ b/package.json
@@ -12,9 +12,11 @@
   "contributors": [],
   "dependencies": {},
   "devDependencies": {
+    "grunt-contrib-jshint": "^1.1.0",
     "jasmine-core": "^2.6.2",
     "karma": "^1.7.0",
     "karma-chrome-launcher": "^2.1.1",
-    "karma-jasmine": "^1.1.0"
+    "karma-jasmine": "^1.1.0",
+    "uglify-es": "github:mishoo/UglifyJS2#harmony"
   }
 }
